--- a/index.html
+++ b/index.html
@@ -1,193 +1,154 @@
 <!DOCTYPE html>
 <html>
+<!--  -->
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
-<div id="menu">
-<li><a href="#about">About Me</a></li>
-<li><a href="#photos">My Photos</a></li>
-<li><a href="#playlist">My Playlist</a></li>
-<li><a href="#like">Like</a></li>
-<li><a href="#qrcoder">QR code</a></li>
-<li><a href="#spa">Q&A</a></li>
-<li><a href="#contact">Contact Me</a></li>
-</div>
-		  
-<section id="about" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-about me
-<br/>
-<br/>
-<br/>
-</section>
+  <div id="menu">
+    <nav>
+      <ul>
+        <li ><a href="#about">About Me</a></li>
+        <li><a href="#photos">My Photos</a></li>
+        <li><a href="#playlist">My Playlist</a></li>
+        <li><a href="#like">Like</a></li>
+        <li><a href="#qrcoder">QR code</a></li>
+        <li><a href="#spa">Q&A</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="warpper">
+    <section id="about" class="section">
 
-<section id="photos" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my photos
-<br/>
-<br/>
-<br/>
-</section>
+      <div class="about">
+        <h1>about me </h1>
+        <br>
+        <p>השם שלי הוא לבוס פרסיבל וולפריק בריאן דמבלדור אבל אתם יכולים לקרוא לי דמבלדור בקצרה.
+          .נולדתי ב 1881 אבל ברוחי אני עוד ילד צעיר שמחפש לחוות את העולם מחדש
+          <br>
+          .יש לי שיער כסוף וזקן ארוך כמו שניתן לראות בתמונות , ביום יום אני מנהל בית ספר לקוסמים כי חינוך זה בדם שלי
+           <br>
+           .יש שאומרים שאני קוסם מבריק וחזק מאד , אדם משעשע בעל חוש אומר ובעל הרבה סבלנות 
+        </p>
+      </div>
+      <br />
 
-<section id="playlist" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my playlist
-<br/>
-<br/>
-<br/>
-</section>
+    </section>
 
-<section id="like" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-give me a like
-<br/>
-<br/>
-<br/>
-</section>
+    <section id="photos" class="section">
 
-<section id="qrcoder" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-scan my code
-<br/>
-<br/>
-<br/>
-</section>
+      <br />
 
-<section id="spa" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-ans
-<br/>
-<br/>
-<br/>
-</section>
+      <h1>my photos </h1>
 
-<section id="contact" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-contact me
-<br/>
-<br/>
-<br/>
-</section>
+      <img class = "photos" src="https://img.mako.co.il/2018/07/11/hp606ppvkp6_mlanoar_i.jpg" alt="">
+      <img class = "photos" src="https://images1.ynet.co.il/PicServer5/2017/11/10/8143839/2872949399080640360yes1130.jpg" alt="">
+      <img class = "photos" src="https://littlestprettythings.com/img/facts/931/28-magical-facts-about-albus-dumbledore-17.jpg" alt="">
+      <br />
+      <br />
+      <br />
+    </section>
+
+    <section id="playlist" class="section">
+      <br />
+      <br />
+   
+      <h1>my playlist </h1>
+      <div class="video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/1LMSOfs10mA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    </section>
 
 
-<script type="text/javascript">
-$(function(){
-  $("#nav a").click(function(e){
-    e.preventDefault();
-    $('html,body').scrollTo(this.hash,this.hash); 
-  });
-});
-</script>
-<script type="text/javascript">
- $(document).scroll(function() {
-    $('#menu').toggle($(this).scrollTop()>1000)
- });​
- </script>
+
+    <section id="qrcoder" class="section">
+      <br />
+
+      <h1> scan my code</h1>
+      <br />
+
+      <div style="margin: 0 auto;">
+        <img class = "qrcode" src="resources/qrcode.png" alt="">
+
+      </div>
+      
+      <br />
+      <br />
+    </section>
+
+    <section id="spa" class="section">
+      <br />
+
+      <br />
+      <br />
+      <h1>Answer</h1>
+      <br>
+      <p>Main difference is that Web 1 mostly used for read – only while web 2 used for read-write and Web 3 allow many different type of interaction.
+        Another difference is that in Web 1 include only couple of content creator and the majority of the user wore consumers in Web 2 and 3 things change and bigger part of the user start to create there content in many platform of social media.
+        While web 1 design based on static pages while web 2 being more dynamic which allow responsive from the user. 
+        </p>
+        <br>
+        <p>
+          For example while looking for the query “whether” we will get different results.
+For Web 1 we might not get any result or only references for a sties with plane text which includes this word.
+For Web 2 we more likely get result to difference sites / forums which include text about weather and might includes some comments on the text.
+On Web 3 we probably will get the current weather at our area and maybe also prediction of the weather for the next week.
+
+        </p>
+      <br />
+      <br />
+      <br />
+    </section>
+
+    <section id="contact" class="section">
+
+      <br />
+      contact me
+      <br/>
+
+      <form action="mailto:myemail@example.com" method="post" enctype="text/plain">
+        your E-mail:<br>
+        <input type="text"><br>
+        Comment:<br>
+        <textarea name="message" id="message" cols="30" rows="10" ></textarea>
+        <!-- <input type="text" id="comment" name="comment" size="50"><br><br> -->
+        <input type="submit" value="Send">
+        <input type="reset" value="Reset">
+        </form>
+
+      <section id="like" class="section">
+
+        give me a like
+  
+        <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v13.0&appId=336586666351753&autoLogAppEvents=1" nonce="EaOZgyDX"></script>
+  <div class="fb-like" data-href="https://web-development-environments-2021.github.io/assignment1-adimarom96/#about" data-width="" data-layout="button" data-action="like" data-size="small" data-share="true"></div>
+        <br />
+        <br />
+        <br />
+      </section>
+
+    </section>
+
+
+  </div>
+
+  <script type="text/javascript">
+    $(function () {
+      $("#nav a").click(function (e) {
+        e.preventDefault();
+        $('html,body').scrollTo(this.hash, this.hash);
+      });
+    });
+  </script>
+  <script type="text/javascript">
+    $(document).scroll(function () {
+      $('#menu').toggle($(this).scrollTop() > 1000)
+    });​
+  </script>
 </body>
+
 </html>
